--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,13 @@
 name = "active_membranes"
-[compat]
-julia = "1.10.2"
-DrWatson = "2.15.0"
+
 [deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+MethodOfLines = "94925ecb-adb7-4558-8ed8-f975c56a0bf4"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
+[compat]
+DrWatson = "2.15.0"
+julia = "1.10.2"
