--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,17 @@
 name = "active_membranes"
 
 [deps]
+DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+FEniCS = "186dfeec-b415-5c13-8e76-5fbf19f56f9b"
+FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 MethodOfLines = "94925ecb-adb7-4558-8ed8-f975c56a0bf4"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
